update idempotency keys and user id fetch